# Multi-Agent-Deep-Researcher

./: .env.example  .gitignore  CODEX_IMPROVEMENT_REQUESTS.md  Dockerfile  PROJECT_BLUEPRINT.md  README.md  app.py  pyproject.toml  requirements-core.txt  requirements.txt
examples/: sample_report.md  sample_report_real.md
scripts/: doctor.py  smoke.py
src/deep_researcher/: __init__.py  config.py  graph.py  llm.py  prompts.py  state.py
src/deep_researcher/agents/: __init__.py  critic.py  planner.py  researcher.py  synthesizer.py  writer.py
src/deep_researcher/tools/: __init__.py  search.py  web_reader.py
src/deep_researcher/utils/: parsing.py
tests/: test_config.py  test_critic.py  test_doctor.py  test_environment_isolation.py  test_graph_rewrite.py  test_graph_smoke.py  test_parsing.py  test_planner.py  test_researcher.py  test_settings_propagation.py  test_state.py  test_tools.py  test_writer.py
